--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -46,6 +46,13 @@
                 <label for="email">Email Address</label>
                 <input type="email" class="form-control" id="email" name="Email" placeholder="Enter Email Address" value="@Model.Email" required>
                 <span asp-validation-for="Email" class="text-danger"></span>
+
+                <div class="form-group">
+                    <label for="phoneNumber">Phone Number</label>
+                    <input type="tel" class="form-control" id="phoneNumber" name="PhoneNumber" placeholder="Enter Your Phone Number" value="@Model.PhoneNumber" required>
+                    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                </div>
+
       </div>
 
             <div class="form-group">
@@ -63,6 +70,12 @@
                 <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password" value="@Model.ConfirmPassword" required>
                 <span class="toggle-password">👁️</span>
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            </div>
+
+
+            <div class="form-group">
+                <label for="studentNumber">Student Number</label>
+                <input type="text" class="form-control" id="studentNumber" name="studentNumber" placeholder="Enter Your Student Number" value="@Model.studentNumber" required>
             </div>
 
             <div>
