--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
               
                 
                 <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Logs" asp-action="Index">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
 
                         <img src="~/svgs/home-1.svg" alt="Home Icon" class="icon" /><span>Home</span>
                     </a>
@@ -69,6 +69,14 @@
                         </a>
                     </li>
                 }
+
+
+
+
+
+
+
+
 
                 @if (User.IsInRole("Staff"))
                 {
