Staff able to re assign Queries to other staff

--- a/Views/Query/StaffQuery/StaffQueries.cshtml
+++ b/Views/Query/StaffQuery/StaffQueries.cshtml
@@ -95,7 +95,7 @@
                            
                                 <div class="task-menu">
                                     <button class="btn" onclick="toggleTaskMenu(this)">
-                                        <i class="fas fa-ellipsis-v"></i>
+                                        <i class="fas fa-ellipsis-v">more</i>
                                     </button>
                                     <div class="task-menu-content">
                                         <a href="#" class="task-menu-item">
