--- a/Views/Query/StaffQuery/TicketDashboard.cshtml
+++ b/Views/Query/StaffQuery/TicketDashboard.cshtml
@@ -33,7 +33,7 @@
                 </a>
             </div>
             <div class="option-card">
-                <a asp-controller="Staff" asp-action="AssignQuery" class="option-link">
+                <a asp-controller="StaffQuery" asp-action="AssignQuery" class="option-link">
                     <div class="card-icon">
                         <i class="fas fa-plus-circle"></i>
                     </div>
